Fixed alignment of vertical panel elements

--- a/src/plugins/sliderPlugin/styles/style.scss
+++ b/src/plugins/sliderPlugin/styles/style.scss
@@ -9,7 +9,7 @@
 }
 
 .slider_vertical {
-    height: 200px;
+    height: 300px;
     flex-direction: row;
 }
 
@@ -25,7 +25,7 @@
 
 .slider__track_vertical {
     width: 10px;
-    height: 200px;
+    height: 300px;
 }
 
 .slider__progress-bar {
