--- a/src/style.scss
+++ b/src/style.scss
@@ -22,7 +22,7 @@ html {
     flex-direction: row;
     align-items: center;
     & .slider-panel__checkboxes-and-radio-wrapper {
-        justify-content: start;
+        justify-content: center;
     }
 }
 
